fix(a11y): increase contrast levels
All these were failing WCAG recommended contrast levels.

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -177,19 +177,18 @@
 	--text-2xl: 20px;
 	--text-3xl: 22px;
 
-	--text-on-blue: var(--blue-600);
-	--text-on-light-blue: var(--blue-500);
+	--text-on-blue: var(--blue-700);
+	--text-on-light-blue: var(--blue-700);
 	--text-on-dark-blue: var(--blue-700);
-	--text-on-blue: var(--blue-600);
-	--text-on-green: var(--dark-green-500);
-	--text-on-yellow: var(--yellow-500);
-	--text-on-orange: var(--orange-500);
-	--text-on-red: var(--red-500);
+	--text-on-green: var(--dark-green-700);
+	--text-on-yellow: var(--yellow-700);
+	--text-on-orange: var(--orange-600);
+	--text-on-red: var(--red-600);
 	--text-on-gray: var(--gray-600);
 	--text-on-light-gray: var(--gray-800);
-	--text-on-purple: var(--purple-500);
-	--text-on-pink: var(--pink-500);
-	--text-on-cyan: var(--cyan-600);
+	--text-on-purple: var(--purple-700);
+	--text-on-pink: var(--pink-600);
+	--text-on-cyan: var(--cyan-800);
 
 	// alert colors
 	--alert-text-danger: var(--red-600);
